--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "@firebase/app": "^0.7.5",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.20.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "firebase": "^9.2.0",
+    "firebase-admin": "^10.0.0",
     "firebase-tools": "^9.21.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.0",
+    "react-hooks": "^1.0.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
