--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,13 @@
 {
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
+  },
+  "functions": {
+    "source": "functions"
   }
 }
