--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "firebase": "^9.2.0",
     "firebase-admin": "^10.0.0",
     "firebase-tools": "^9.21.0",
+    "lint": "^0.7.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-currency-format": "^1.0.0",
@@ -37,8 +39,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
